# Web-Project

./: .flake8  .gitignore  pyproject.toml
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/app/settings/: local.py  production.py  settings.py
app/main/: admin.py  forms.py  models.py  urls.py  views.py
app/main/models/: __init__.py  appointment.py  location.py  schedule.py  service.py  week.py
app/main/static/: layout.css
app/main/static/css/: style.css
app/main/templates/: index.html  layout.html
app/main/templates/main/: main.html  register_done.html  registration.html  test.html
app/main/views/: __init__.py  main_page_view.py
app/templates/: layout.html
app/templates/main/: main.html
app/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app/users/models/: __init__.py  abc_custom_user.py  customer.py  user.py  worker.py
app/users/serializers/: __init__.py  user_serializer.py
app/users/static/users/: login.css
app/users/templates/: login.html  registration.html  sing_in.html  sing_out.html  sing_up.html
app/users/templates/users/: sing_in.html  sing_up.html
app/users/views/: __init__.py  user_api_views.py  user_auth_views.py  user_sing_in.py  user_sing_out.py  user_sing_up.py
